# OxyParser

./: LICENSE  README.md  _oxyparser_cache_oxylabs  pyproject.toml
.github/workflows/: lint.yaml
examples/: scrape_and_parse_with_ai_ebay_page.py  scrape_and_parse_with_ai_job_page.py
oxyparser/: __init__.py  exceptions.py  logging.py  models.py  oxyparser.py  scripts.py  settings.py  utils.py
oxyparser/ai/: query.py
oxyparser/cache/: base.py  file.py  redis.py  utils.py
oxyparser/parser/: ai_parser.py  cleaner.py  parser.py
oxyparser/scraper/: scraper.py
resources/: README.md
tests/: test_cache.py  test_parser.py  test_parser_utils.py  test_scraper_utils.py
