[tool.poetry]
name = "oxyparser"
version = "0.1.1"
description = ""
authors = ["Tadas Gedgaudas <tadas.gedgaudas@oxylabs.io>"]
readme = "README.md"


[project]
name = "oxyparser"
description = "Oxy® Parser - Automated HTML Parsing with LLMs!"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Tadas Gedgaudas", email = "tadas.gedgaudas@oxylabs.io" },
]
dynamic = ["version"]

[project.urls]
Homepage = "https://oxylabs.io"
Documentation = "https://github.com/oxylabs/OxyParser/README.md"
Repository = "https://github.com/oxylabs/OxyParser"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.1.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
tiktoken = "^0.6.0"
tenacity = "^8.2.3"
aiofiles = "^23.2.1"
tldextract = "^5.1.1"
isort = "^5.13.2"
types-aiofiles = "^23.2.0.20240106"
redis = "^5.0.2"
litellm = "^1.30.5"

[tool.poetry.dev-dependencies]
ruff = "~0.3.2"
mypy = "~1.9.0"
isort = "~5.13.2"
pytest-asyncio = "^0.23.5"
pytest = "^8.0.2"

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
plugins = [
  "pydantic.mypy"
]

[tool.poetry.scripts]
lint = "oxyparser.scripts:lint"

[tool.hatch.version]
path = "oxyparser/__init__.py"

[build-system]
requires = ["hatchling >= 1.7.0"]
build-backend = "hatchling.build"
